Configure build to be compatible with Java 11
See gh-14028