@@ -49,21 +49,28 @@
 	</build>
 	<profiles>
 		<profile>
-			<id>java9</id>
+			<id>java9-10</id>
 			<activation>
-				<jdk>[9,)</jdk>
+				<jdk>[9,10]</jdk>
 			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>--add-modules java.base,java.xml.ws</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
+			<dependencies>
+				<dependency>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>java11+</id>
+			<activation>
+				<jdk>[11,)</jdk>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 </project>
